# Python-FastAPI

API-Versioning/: inventory.db  main.py  requirements.txt
APIKey-auth/: main.py
AWS-Lambda-deploy/: README.md  main.py  requirements.txt
Alembic-simple-migration/: alembic-migration.db  alembic.ini  database.py  main.py  readme.md  requirements.txt
Authentication - JWT/: README.md  auth.py  database.py  main.py  models.py  requirements.txt
Authentication-Auth0/: .config  README.md  main.py  requirements.txt  utilities.py
Authentication-KeyCloak/: .env.example  README.md  main.py  requirements.txt
Basic-Python/: main.py  pydantic.ipynb
CQRS/: README.md  main.py  requirements.txt
Containerize Fastapi/: Dockerfile  README.md  docker-compose.yml  main.py
CustomExceptionHandling/: .gitignore  requirements.txt
Embedding/: .gitignore  main.py  readme.md  requirements.txt
FastApi-Postgresql/: app.py  database.py  models.py  requirements.txt
FileUploads/: README.md  main.py
Fullstack-Nextjs/: .gitignore
Langchain-containerized-Services/: docker-compose.yml  insert_data.py  requirements.txt
Loguru-Logging/: README.md  main.py  requirements.txt
MCP-StreamableHttp/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
MongoDB-Api/: .env.example  main.py  readme.md
Monitoring-FastApi-DockerHubImage/: README.md  docker-compose.yml  prometheus.yml
MonitoringApp/: Dockerfile  README.md  app.py  docker-compose.yml  grafana-fastapi.json  prometheus.yml  requirements.txt
Poetry-venv/: README.md  pyproject.toml
Poetry-venv/app/: main.py
(+101 files in other folders)
