[tool.poetry]
name = "poetry-venv"
version = "0.1.0"
description = "Manage dependencies for FastAPI app"
authors = ["Manimaran"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
